test/good/27.zlus

let node g () =
  let rec x = 1 -> pre y+1
  and y = x + 1 in
  x

let node f () =
  let rec x = 1 -> pre o + 2
  and 
      y = x + 1 
  and match true with
      | true -> do o = x+1 done
      | false -> do o = y - 1 done
      in
  o
