test/bad/20.zlus
(*
  Type error: x must be initialized in every branch.
*)

let hybrid f () =
  let rec
    match true with
    | true -> do x = 1.0 and init x = 0.0 done
    | fase -> do x = 2.0 done in
  x

